fix(styles): need only vertical alignment to list-title-text [ci visual] (#3988)

--- a/packages/styles/src/mixins/list/_list-base.scss
+++ b/packages/styles/src/mixins/list/_list-base.scss
@@ -128,7 +128,7 @@
     }
 
     .#{$block }__title-text {
-      @include fd-flex-center();
+      @include fd-flex-vertical-center();
     }
 
     ~ .#{$block}__icon {
